# ai-context-firewall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci-deployment.md  setup-guide.md
src/acf/: __init__.py  __main__.py  cli.py
src/acf/audit/: __init__.py  logger.py
src/acf/config/: __init__.py  settings.py
src/acf/detection/: __init__.py  engine.py  entropy.py  patterns.py  rules.py
src/acf/models/: __init__.py  types.py
src/acf/proxy/: __init__.py  file_filter.py  intercept.py  server.py  targets.py
src/acf/redaction/: __init__.py  redactor.py
tests/: conftest.py
tests/fixtures/: aws_credentials  custom_rules.yaml  github_pat  jwt_token  mixed_safe_code.py  mixed_secrets.json  sample_env
tests/integration/: test_audit_e2e.py  test_pipeline.py  test_proxy_e2e.py
tests/unit/: test_cli.py  test_cli_audit.py  test_cli_scan.py  test_config.py  test_engine.py  test_entropy.py  test_file_filter.py  test_intercept.py  test_logger.py  test_models.py  test_patterns.py  test_proxy.py  test_redactor.py  test_rules.py  test_targets.py
